# kitefs-examples

./: README.md  what-is-kitefs.md
backend/: .env.example  .gitignore  README.md  kitefs.yaml  main.py  pyproject.toml
frontend/: .env.example  README.md
frontend/src/: App.css  App.tsx  index.css
training/: .env.example  .gitignore  README.md  kitefs.yaml  price_prediction.ipynb  pyproject.toml
training/feature_store/definitions/: demo_validation_modes.py  listing_features.py  town_market_features.py
training/notebooks/: hello_world.ipynb
training/scripts/: generate_2025_dataset.py  generate_jan2026_dataset.py
