[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.3",
    "kitefs[aws]>=0.1.0",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.8.0",
]


# [tool.uv.sources]
# kitefs = { path = "../../kitefs", editable = true }

[tool.uv]
prerelease = "allow"
