[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kitefs[aws]>=0.1.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.8.0",
]


# [tool.uv.sources]
# kitefs = { path = "../../kitefs", editable = true }

[tool.uv]
prerelease = "allow"
